--- a/static_cdn/css/linh.css
+++ b/static_cdn/css/linh.css
@@ -9,6 +9,34 @@ html{
 body{
   font-family: 'Poppins', sans-serif;
 }
+h1 {
+  color: #2F5181;
+  letter-spacing: 0.22rem;
+  text-align: center;
+}
+h2 {
+  color: #2F5181;
+  letter-spacing: 0.22rem;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+}
+p{
+  font-size: 22px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  color:#2b2b2b;
+  font-family: 'Poppins ExtraLight';
+}
+h2, h2 a{
+  text-decoration: none;
+  color: #BDCDDE;
+  font-family: 'Poppins ExtraLight', sans-serif;
+  font-size: 22px;
+}
+h2 a:hover{
+  color: #2F5181;
+}
 .item2 a{
   color: #2F5181;
   color: #2F5181EB;
@@ -19,6 +47,7 @@ body{
   font-family: 'Poppins Regular', sans-serif;
   font-size: 30px;
   font-weight: 300;
+  white-space: nowrap;
 }
 .item2 a:hover{
   color: #BDCDDE;
@@ -60,6 +89,7 @@ body{
   grid-row: 2;
   text-align: left;
   margin-left: -3rem;
+  max-width: 1800px;
 }
 .item5 {
   grid-column: 1 / span 3;
@@ -150,6 +180,48 @@ body{
 #linh-Nav .closebtn:hover{
   filter: opacity(80%);
 }
+.about-photo { grid-area: menu; }
+.about-text { grid-area: main; }
+
+.about-container {
+  display: grid;
+  grid-template-areas:
+    'menu main main main';
+  grid-gap: 2rem;
+  padding: 10px;
+}
+
+.about-container > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+.about-photo {
+  text-align: center;
+}
+.about-photo img{
+  max-width: 25rem;
+  margin-left: 2rem;
+  border-radius: 12px;
+}
+.about-text p {
+  font-size: 22px;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  color:#2b2b2b;
+  font-family: 'Poppins ExtraLight';
+}
+.about-text h1{
+  margin-top: -1rem;
+  color: #2F5181;
+  letter-spacing: 0.22rem;
+}
+.contact-container{
+  text-align: center;
+}
+.contact-container h1{
+  margin-top: -2rem;
+}
 @media only screen and (max-width: 890px) {
   body{
     overflow-x: hidden;
@@ -202,5 +274,22 @@ body{
   }
   #overlay-show-img{
     padding-top: 4rem;
+  }
+  .about-container {
+    grid-template-areas: 'menu'
+                         'main';
+  }
+  .about-photo img{
+    margin:0;
+  }
+}
+@media only screen and (max-width: 510px) {
+  p{
+    font-size: 22px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .about-photo img {
+    max-width: 17rem;
   }
 }
